fix(store-console): expose all members
